@@ -279,3 +279,8 @@ Mon Dec 19 16:33:15 2011                        Michael Jennings (mej)
 
 Fix POD formatting for =cut directive.
 ----------------------------------------------------------------------
+Wed Dec 21 15:36:09 2011                        Michael Jennings (mej)
+
+Created a single unified wrapper for object properties (i.e., object
+member variables and the accessor methods that go with them).
+----------------------------------------------------------------------
